--- a/visualization/index.html
+++ b/visualization/index.html
@@ -9,7 +9,7 @@
     <div class="controls">
         <h1>Red-Black Tree Visualization</h1>
 
-        <div>
+        <div class="control-row">
             <input id="insertInput" type="number" placeholder="Enter integer to insert" />
             <button id="insertBtn">Insert</button>
 
@@ -17,8 +17,14 @@
             <button id="deleteBtn">Delete</button>
 
             <button id="deleteAllBtn">Delete All</button>
-            
         </div>
+
+        <div class="control-row">
+            <input id="searchInput" type="number" placeholder="Search for integer" />
+            <button id="searchBtn">Search</button>
+            <button id="clearSearchBtn" class="muted">Clear</button>
+        </div>
+
         <p>Open this page at <a href="/" id="serverLink">http://localhost:8080/</a>.</p>
     </div>
     <canvas id="treeCanvas" width="1200" height="800"></canvas>
