--- a/visualization/index.html
+++ b/visualization/index.html
@@ -20,17 +20,7 @@
         <div class="control-row">
             <input id="searchInput" type="number" placeholder="Search integer" />
             <button id="searchBtn">Search</button>
-            <button id="perfBtn" style="background-color: #6610f2;">📊 Run Performance Analysis</button>
-        </div>
-
-        <div class="log-controls">
-            <div class="log-header">
-                <strong>Operation Log</strong>
-                <button id="clearLogBtn" class="muted small">Clear</button>
-            </div>
-            <div id="logBox" class="log-box">
-                <div id="logList" class="log-list"></div>
-            </div>
+            <button id="perfBtn" style="background-color: #6610f2;">Run Performance Analysis</button>
         </div>
     </div>
 
@@ -57,9 +47,6 @@
                 </div>
                     <canvas id="perfChart"></canvas> </div>
                 <div class="perf-right">
-                    <div id="reportText" class="report-text">
-                        Click "Run Benchmark" to test Insert/Search speeds for N=100, 500, 1000 nodes.
-                    </div>
                     <button id="runBenchBtn" class="small">▶ Start Benchmark</button>
                 </div>
             </div>
